# calcstarting

./: .gitignore  CalcFSPdfExport.spec  README.md  StartingOrderWithClubNames.rpt  pyproject.toml  requirements.txt
calcfs_pdf_export/: __init__.py  __main__.py  app.py  calcfs_store.py  cli.py  dbf_utils.py  evsk_titles.py  export_pipeline.py  ids.py  merge_pdfs.py  pdf_render.py  protocol_pdf_render.py  protocol_report.py  rpt_export.py  rpt_ole_probe.py  starting_order_report.py
docs/: ARCHITECTURE.md  GOE_DECODING.md  JSON_TYPES_DICTIONARY.md  JSON_VIEWER_README.md  OSIS_FULL_INSTRUCTION.md  PAGINATION_NOTES.md  PROJECT_AUDIT.md  README.md  REPORT_MAPPING_STARTING_ORDER.md  RPT_ANALYSIS.md
scripts/: build_exe.ps1  dump_school_sources.py  make_icon.py  recover_from_transcript.py  scan_school_fields.py
templates/: report_profiles.yaml
tests/: test_ids.py
